traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:13: error: not enough arguments for method changerLigne: (x: Int)Unit.
Unspecified value parameter x.
    changerLigne();
                ^TraversalDiagonal:14: error: not enough arguments for method changerColonne: (y: Int)Unit.
Unspecified value parameter y.
    changerColonne();
                  ^TraversalDiagonal:18: error: not found: value x
  x+=1;
  ^TraversalDiagonal:19: error: not found: value x
  setPos(x,y);
         ^