traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.code
var diag = 1;
var count:Int=1;
var y:Int=1;
override def run() {
  setPos(0,0);
  writeMessage(0);
  for(i<-1 to 6){
    diagonale();
  }
}

def diagonale(){
   while(y!=0){
    changerLigne();
    changerColonne();
    }
   }
def changerColonne(y:Int){
  x+=1;
  setPos(x,y);
}
def changerLigne(x:Int){
  y=y-1
  setPos(x,y);
}